# feed-fetcher

./: .gitignore  Cargo.toml  Makefile.toml  README.md
data/: opml.xml
src/: db.rs  extract.rs  main.rs  models.rs
