[package]
name = "feed-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atom_syndication = { version = "0.12", features = ["with-serde"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
rss = { version = "2", features = ["serde"] }
playwright = "0.0.20"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1.4"
sqlx = { version = "0.6.3", features = [ "postgres", "runtime-tokio-rustls", "uuid", "time", "macros", "chrono" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
webpage = { version = "1", features = ["serde"] }
opml = "1.1.5"
url = "2.4.0"
log = "0.4.19"
simplelog = "0.12.1"
